# cpp-jsonserializer

./: CMakeLists.txt  DataStructureGenerator.py  Jsoncpp.cmake  README.md  TODO  generateIfChanged.cmake  generator.py  sample.json
example/: CMakeLists.txt  main.cpp  sample.json  sample2.json
include/: PersistingException.h  PersistingService.h  Serializable.h  SerializableException.h  StructConverter.h  generated.h
jsonserializer/: ConverterException.h  FromJSONTemplates.cpp  Serializable.h  StructConverter.h  StructConverterTemplateDefinitions.h  ToJSONTemplates.cpp  TypeCheckTemplates.h  json.h
modules/: FindJsoncpp.cmake
src/: PersistingService.cpp  Serializable.cpp
templates/: Converter.cpp  Converter.h  FromJSONTemplates.cpp  Structures.cpp  Structures.h  ToJSONTemplates.cpp
